--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+### Covers for Node.JS ###
+
 # Logs
 logs
 *.log
@@ -19,3 +21,31 @@ node_modules
 
 # Bower components
 public/vendor/bower_components/**.*
+
+### Covers for IDE JetBrains WebStorm ###
+
+## Directory-based project format:
+.idea/
+# if you remove the above rule, at least ignore the following:
+
+## File-based project format:
+*.ipr
+*.iws
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
