--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.6",
-    "jquery": "~2.2.0"
+    "jquery": "~2.2.0",
+    "socket.io-client": "~1.4.4"
   }
 }
