--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^2.1.3",
     "mongoose": "^4.3.4",
     "nconf": "^0.8.2",
+    "nodemailer": "^2.0.0",
     "socket.io": "^1.4.4",
     "winston": "^2.1.1"
   }
