--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+### System and other covers
+
+# Question database
+questions.txt
