--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "kerberos": "0.0.17",
     "mongodb": "^2.1.3",
     "mongoose": "^4.3.4",
+    "mongoose-simple-random": "^0.3.3",
     "nconf": "^0.8.2",
     "nodemailer": "^2.0.0",
     "socket.io": "^1.4.4",
