--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "prod_build": "NODE_ENV=prod webpack",
+    "dev_build": "webpack"
   },
   "dependencies": {
     "async": "^1.5.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "body-parser": "^1.14.2",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.0",
@@ -19,7 +23,10 @@
     "mongoose-simple-random": "^0.3.3",
     "nconf": "^0.8.2",
     "nodemailer": "^2.0.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "socket.io": "^1.4.4",
+    "webpack": "^1.12.14",
     "winston": "^2.1.1"
   }
 }
