--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "private": true,
   "scripts": {
     "prod": "NODE_ENV=prod webpack",
-    "dev": "webpack",
     "start": "node backend/app.js NODE_ENV=development"
   },
   "dependencies": {
     "async": "^1.5.1",
+    "autoprefixer-loader": "^3.2.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "body-parser": "^1.14.2",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.0",
+    "css-loader": "^0.23.1",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
     "express-handlebars": "^2.0.1",
@@ -27,6 +28,8 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "socket.io": "^1.4.4",
+    "style-loader": "^0.13.0",
+    "stylus-loader": "^1.5.1",
     "webpack": "^1.12.14",
     "winston": "^2.1.1"
   }
