--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "mongoose-simple-random": "^0.3.3",
     "nconf": "^0.8.2",
     "nodemailer": "^2.0.0",
+    "normalize-styl": "^3.0.3",
     "react": "^0.14.7",
+    "react-addons-css-transition-group": "^0.14.7",
+    "react-addons-transition-group": "^0.14.7",
     "react-dom": "^0.14.7",
     "socket.io": "^1.4.4",
     "style-loader": "^0.13.0",
